<resources>
    <string name="app_name">Encuesta</string>
    <string name="suma">Sumas</string>
    <string name="resta">Restas</string>
    <string name="multiplicacion">Multiplicaciones</string>
    <string name="historial">Ver encuestas almacenadas</string>
    <string name="atentcion">Atención!</string>
    <string name="cancel">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="volver">Desea volver sin guardar respuestas?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selecciona_respuesta">Selecciona la respuesta correcta</string>
    <string name="seleccionar">Elige el valor correcto</string>
    <string name="suma1">Cúal es el resultado de 15 + 15</string>
    <string name="suma2">Cúal es el resultado de 30 + 10</string>
    <string name="suma3">Cúal es el resultado de 10 + 10</string>
    <string name="suma4">Cúal es el resultado de 20 + 20</string>
    <string name="suma5">Cúal es el resultado de 17 + 13</string>
    <string name="resta1">Cúal es el resultado de 30 – 10</string>
    <string name="resta2">Cúal es el resultado de 20 – 10</string>
    <string name="resta3">Cúal es el resultado de 50 – 20</string>
    <string name="resta4">Cúal es el resultado de 60 – 30</string>
    <string name="resta5">Cúal es el resultado de 45 – 15</string>
    <string name="multi1">Cúal es el resultado de 3 * 10</string>
    <string name="multi2">Cúal es el resultado de 5 * 4</string>
    <string name="multi3">Cúal es el resultado de 3 * 10</string>
    <string name="multi4">Cúal es el resultado de 6 * 5</string>
    <string name="multi5">Cúal es el resultado de 8 * 5</string>
    <string name="finalizar">Finalizar</string>
    <string name="confirmar">¿Desea confirmar los resultados?</string>
    <string name="volver_atras">Volver atras</string>
    <string name="resultados">Estos son tus resultados</string>
    <string name="puntos">Cada acierto equivale a 5 puntos</string>

</resources>

